--- a/drafts/my-2013.md
+++ b/drafts/my-2013.md
@@ -15,6 +15,8 @@ date: 2014-1-6
 
 在折腾Znote和Peanut的过程中学了不少Web的东西，虽然至今也没把Angulagur-js搞明白，至少会了一些js；虽然不能从头设计出一个漂亮页面，但起码会Copy了~
 
+今年开始利用Github了，一开始只是当做一个代码备份工具来用的，Push和Commit几乎一样多。。。后来慢慢地用它来管理项目，我的代码也有人Fork和Star了~
+
 还有，今年学了一门新语言Objective-c，虽然仍在入门中。。。
 
 **工作**
