Move images from local to aliyun

--- a/drafts/2015-12-31-my-2015.md
+++ b/drafts/2015-12-31-my-2015.md
@@ -5,7 +5,7 @@ tags: 总结
 date: 2015-12-31
 excerpt: 难得在一年的最后一天写写年终总结，今年不打算总结年初的目标了，因为总结了也没用，索性放弃了。
 image:
-    feature: /static/img/G0288964.jpg
+    feature: https://z_blog.oss-cn-hangzhou.aliyuncs.com/blog/G0288964.jpg?x-oss-process=style/jpg
 ---
 
 
