--- a/drafts/2015-5-10-concert.md
+++ b/drafts/2015-5-10-concert.md
@@ -6,7 +6,7 @@ tags:
     - 演唱会
     - 专车
 image:
-    feature: /static/img/jay.png
+    feature: https://z_blog.oss-cn-hangzhou.aliyuncs.com/blog/jay.png?x-oss-process=style/jpg
 ---
 
 
