--- a/drafts/2016-8-11-sym.md
+++ b/drafts/2016-8-11-sym.md
@@ -8,7 +8,7 @@ tags:
     - Mac
     - Crash
 image:
-    feature: /static/img/sym_logo.png
+    feature: https://z_blog.oss-cn-hangzhou.aliyuncs.com/blog/sym_logo.png?x-oss-process=style/jpg
 excerpt: >
     以前解析 Crash 的时候，我习惯用命令行工具，比如 symbolicatecrash 和 atos。遇到特殊格式的 Crash log，比如友盟这样的，写个 Python 脚本就搞定了
 ---
